--- a/src/public/assets/stylesheets/index.css
+++ b/src/public/assets/stylesheets/index.css
@@ -5,16 +5,63 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat|Odibee+Sans|Russo+One&display=swap');
 
 /* -------------------  All  --------------------- */
+body {
+  background-color: rgb(241, 239, 241);
+}
+
 h1 {
   font-family: 'Russo One', sans-serif;
   text-align: center;
+}
+h2 {
+  text-align: center;
+}
+
+h3 {
+  margin-top: 0;
 }
 
 #root {
   font-family: 'Montserrat', sans-serif;
 }
 
+#roverSelector {
+  padding-left: 20px;
+  margin-bottom: 20px;
+  width: 100%;
+  height: 40px;
+  font-size: 20px;
+  background-color: hsla(264, 47%, 69%, 0.3);
+  border: 1px blueviolet;
+  border-radius: 5px;
+}
+
+.info-container {
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.card {
+  text-align: center;
+  background-color: hsla(264, 47%, 69%, 0.3);
+  width: 300px;
+  padding: 20px;
+  margin: 20px;
+}
+
+.image-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
 /* -------------------  MOBILE  --------------------- */
+.rover-img {
+  width: 300px;
+  margin: 20px
+}
 
 body {
   display: flex;
@@ -43,16 +90,6 @@ footer {
   background-repeat: repeat;
 }
 
-#roverSelector {
-  padding-left: 20px;
-  width: 100%;
-  height: 40px;
-  font-size: 20px;
-  background-color: hsla(264, 47%, 69%, 0.3);
-  border: 1px blueviolet;
-  border-radius: 5px;
-}
-
 /* -------------------  TABLET  --------------------- */
 @media (min-width: 768px) {
   /* use mobile */
@@ -66,6 +103,11 @@ footer {
   #root {
     width: 1224px;
     margin: auto;
+  }
+
+  .rover-img {
+    width: 400px;
+    margin: 20px
   }
 }
 
