--- a/src/public/assets/stylesheets/index.css
+++ b/src/public/assets/stylesheets/index.css
@@ -45,10 +45,17 @@ h3 {
 
 .card {
   text-align: center;
+  border-style: dashed;
+  border-color: violet;
   background-color: hsla(264, 47%, 69%, 0.3);
   width: 300px;
   padding: 20px;
   margin: 20px;
+  border-radius: 10px;
+}
+
+.card h3 {
+  color: rgb(109, 1, 136)
 }
 
 .image-container {
