--- a/src/public/assets/stylesheets/index.css
+++ b/src/public/assets/stylesheets/index.css
@@ -100,7 +100,7 @@ footer {
 #root {
   border: 2px solid #982ce0;
   border-radius: 12px;
-  background-image: url("../pattern.png");
+  background-image: url("../images/pattern.png");
   background-repeat: repeat;
 }
 
