Update greetings component style

--- a/src/public/assets/stylesheets/index.css
+++ b/src/public/assets/stylesheets/index.css
@@ -71,6 +71,10 @@ h3 {
   justify-content: space-evenly;
 }
 
+.special {
+  color: rgb(109, 1, 136)
+}
+
 /* -------------------  MOBILE  --------------------- */
 .rover-img {
   width: 300px;
